syntax = "proto3";
package todd.api.exp;

// import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Groups {
  rpc ListGroups(GroupFilter) returns (GroupList) {}
  rpc CreateGroup (Group) returns (GroupResponse) {}
}

message Group {
  int32 id = 1;
  string name  = 2 [(validate.rules).string.min_len = 3];
  
  message Match {
    string type = 1 [(validate.rules).string = {in: ["hostname", "subnet"]}];
    string statement = 2 [(validate.rules).string.min_len = 3];
  }

  repeated Match matches = 3;
}

message GroupList{
    repeated Group groups = 1;
}

message GroupResponse {
  int32 id = 1;
  bool success = 2;
}
message GroupFilter {    
  string keyword = 1;
}
